Bug fixed and visible component corection

--- a/www/css/hipp.css
+++ b/www/css/hipp.css
@@ -110,8 +110,9 @@
 
 .adjust-select-file
 {
+  width: 620px;
   min-width: 180px;
-  max-width: 580px;  
+  max-width: 620px;  
 }
 
 .adjust-column
@@ -122,7 +123,7 @@
   margin-top: 5px;
 }
 
-@media (max-width: 1376px) 
+@media (max-width:1376px) 
 {
   .adjust-column
   {
